# Quantlab

./: README.md  README.txt  input.csv
src/: CMakeLists.txt  CSVlineParser.h  ExchangeDataProcessor.h  ReadFromCSV.h  distro.sh  main.cpp
src/data/: input.csv  output.csv
src/include/: Book.h  BookRecord.h  CommandLineArgs.h  InputData.h  Price.h  Quantity.h  RecordParcer.h  Symbol.h  TimeStamp.h
src/tests/: ExchangeDataUnitTest.cpp
